RESOLVED FIXED168260
URLs with an invalid IPv4 address should be invalid
https://bugs.webkit.org/show_bug.cgi?id=168260
Summary URLs with an invalid IPv4 address should be invalid
Alex Christensen
Reported 2017-02-13 15:36:09 PST
URLs with an invalid IPv4 address should be invalid
Attachments
Patch (15.10 KB, patch)
2017-02-13 15:38 PST, Alex Christensen
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (1.03 MB, application/zip)
2017-02-13 16:35 PST, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-elcapitan (1.22 MB, application/zip)
2017-02-13 16:37 PST, Build Bot
no flags
Archive of layout-test-results from ews115 for mac-elcapitan (1.67 MB, application/zip)
2017-02-13 16:59 PST, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (938.24 KB, application/zip)
2017-02-13 19:10 PST, Build Bot
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (682.11 KB, application/zip)
2017-02-13 21:16 PST, Build Bot
no flags
Patch (25.98 KB, patch)
2017-02-13 23:33 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2017-02-13 15:38:55 PST
Build Bot
Comment 2 2017-02-13 16:35:03 PST
Comment on attachment 301403 [details] Patch Attachment 301403 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3081719 New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 3 2017-02-13 16:35:05 PST
Created attachment 301416 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-02-13 16:37:23 PST
Comment on attachment 301403 [details] Patch Attachment 301403 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3081764 New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 5 2017-02-13 16:37:25 PST
Created attachment 301417 [details] Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-02-13 16:59:23 PST
Comment on attachment 301403 [details] Patch Attachment 301403 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3081850 New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 7 2017-02-13 16:59:26 PST
Created attachment 301419 [details] Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-02-13 19:10:19 PST
Comment on attachment 301403 [details] Patch Attachment 301403 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3082637 New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 9 2017-02-13 19:10:23 PST
Created attachment 301439 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 10 2017-02-13 21:15:58 PST
Comment on attachment 301403 [details] Patch Attachment 301403 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3082358 New failing tests: fetch/fetch-url-serialization.html
Build Bot
Comment 11 2017-02-13 21:16:01 PST
Created attachment 301445 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Alex Christensen
Comment 12 2017-02-13 23:33:55 PST
Alex Christensen
Comment 13 2017-02-13 23:45:27 PST
Alex Christensen
Comment 14 2017-02-14 08:30:06 PST
Note You need to log in before you can comment on or make changes to this bug.