URLs with an invalid IPv4 address should be invalid https://bugs.webkit.org/show_bug.cgi?id=168260

Reviewed by Tim Horton.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WebCore:

All URL hosts are fed through the IPv4 parser.  https://webkit.org/ doesn't
look enough like an IPv4 address to be considered an invalid IPv4 address, so
we continue to the String host processing.  http://127.0.0.257 does, though, and
according to https://url.spec.whatwg.org/#concept-ipv4-parser parsing that URL
should fail.

Covered by newly passing web platform tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parseIPv4Host):
(WebCore::URLParser::parseHostAndPort):
* platform/URLParser.h:

Source/WTF:

* wtf/Expected.h:
(WTF::Expected::value):
Added missing WTFMove for rvalue Expected::value().

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):
Update tests to reflect new correct behavior.

LayoutTests:

* fetch/fetch-url-serialization-expected.txt:



Canonical link: https://commits.webkit.org/185314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212279 268f45cc-cd09-0410-ab3c-d52691b4dbfc